WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291579
[WebGPU][Regression:
293608@main
] RenderBundle command replay bypasses state caches
https://bugs.webkit.org/show_bug.cgi?id=291579
Summary
[WebGPU][Regression: 293608@main] RenderBundle command replay bypasses state ...
Mike Wyrzykowski
Reported
2025-04-15 11:10:48 PDT
[WebGPU][Regression:
293608@main
] RenderBundle command replay bypasses state caches
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-04-15 11:23:03 PDT
<
rdar://problem/149249201
>
Mike Wyrzykowski
Comment 2
2025-04-15 11:23:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44106
EWS
Comment 3
2025-04-16 10:24:38 PDT
Committed
293757@main
(05784efcc3c8): <
https://commits.webkit.org/293757@main
> Reviewed commits have been landed. Closing PR #44106 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug