[WebGPU][Regression: 293608@main] RenderBundle command replay bypasses state caches https://bugs.webkit.org/show_bug.cgi?id=291579 rdar://149249201

Reviewed by Tadeu Zagallo.

To avoid redundant state changes, in 293608@main a cache was added to RenderPassEncoder.

However while replaying RenderBundles, which is an uncommon path that only occurs
in obscure usage cases, the replay mechanism was not updating the cache.

Inserting checks in the replay to update the cache seems unnecesary given this is a
rare use case one which has never been observed in the wild, so instead bypass the cache
during replay.

* LayoutTests/fast/webgpu/nocrash/fuzz-291579-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-291579.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::setVertexBuffer):
(WebGPU::RenderPassEncoder::setFragmentBuffer):
(WebGPU::RenderPassEncoder::executeBundles):
Bypass cache during bundle replay.

Canonical link: https://commits.webkit.org/293757@main